fixed issue with overflow being hidden for arrow in WelcomeElements

--- a/src/containers/FadeInSection/FadeInSection.module.css
+++ b/src/containers/FadeInSection/FadeInSection.module.css
@@ -1,5 +1,4 @@
 .FadeInSection {
-  overflow: hidden;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.6s ease-out, transform 1.2s ease-out;
@@ -8,7 +7,7 @@
 }
 
 .FadeToTop {
-  transform: translateY(-20vh);
+  transform: translateY(20vh);
 }
 
 .FadeToBottom {
